fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -683,6 +683,17 @@ body {
   position: relative;
 }
 
+.footer1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5em 3em 3em 5em;
+  background-color: #1a1a1a;
+  color: #ffffff;
+  position: relative;
+  margin-top: 5em;
+}
+
 .socialIcons {
   display: flex;
 }
@@ -830,7 +841,7 @@ body {
   border-radius: 20px;
   margin: 0 0.5em;
   font-size: 1em;
-  min-width: 150px;
+  min-width: 250px;
 }
 
 .searchButtonParks {
@@ -1078,6 +1089,9 @@ body {
 
 /* Mountain Hero Page */
 /* Hero Section */
+/* .mountainPage {
+    background-color: #000000;
+} */
 .heroSectionMountain {
   position: relative;
   height: 90vh;
@@ -1107,6 +1121,7 @@ body {
   z-index: 1;
   width: 100%;
   padding: 2em;
+  margin-top: 4em;
 }
 
 .mainContent {
@@ -1115,12 +1130,12 @@ body {
 }
 
 .heroTitleMountain {
-  font-size: 3em;
+  font-size: 2.5em;
   margin-bottom: 0.5em;
 }
 
 .heroSubtitleMountain {
-  font-size: 1.2em;
+  font-size: 1em;
   margin-bottom: 2em;
 }
 
@@ -1131,10 +1146,10 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 30px;
   padding: 0.5em;
-  width: 90%;
-  max-width: 800px;
+  width: 80%;
+  max-width: 700px;
   margin-bottom: 2em;
-  margin-left: 23em;
+  margin-left: 26em;
 }
 
 .filterButtonMountain {
@@ -1157,7 +1172,7 @@ body {
   margin: 0 0.5em;
   font-size: 1em;
   cursor: pointer;
-  width: 150px;
+  width: 180px;
 }
 
 .searchInputMountain {
@@ -1167,7 +1182,7 @@ body {
   border-radius: 20px;
   margin: 0 0.5em;
   font-size: 1em;
-  min-width: 150px;
+  max-width: 350px;
 }
 
 .searchButtonMountain {
@@ -1210,14 +1225,16 @@ body {
 }
 
 /* Results Section */
+
 .resultsTitleMount {
   display: flex;
   justify-content: space-between;
   width: 90%;
-  margin: 2em auto 1em auto;
+  margin: 3em auto 3em auto;
 }
 
-.clearResultsButtonMount, .viewAllButtonMount {
+.clearResultsButtonMount,
+.viewAllButtonMount {
   background-color: #d7f0d7;
   color: #000;
   border: none;
@@ -1227,7 +1244,8 @@ body {
   cursor: pointer;
 }
 
-.clearResultsButtonMount:hover, .viewAllButtonMount:hover {
+.clearResultsButtonMount:hover,
+.viewAllButtonMount:hover {
   background-color: #ffffff;
   color: #000000;
 }
@@ -1257,6 +1275,7 @@ body {
 .mountainCard:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  color: #b4d78c;
 }
 
 .mountainCard img {
